test_regress/t/t_dpi_type_bad.out
%Error: t/t_dpi_type_bad.v:11:4: Unsupported DPI type 'DPI-BAD': Use 'DPI-C'
   11 |    import "DPI-BAD" task dpix_twice;
      |    ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
